prevent double open of collapse

--- a/admin/source/css/elements.css
+++ b/admin/source/css/elements.css
@@ -137,6 +137,7 @@
 /* result colors */
 [field-type=id]{
   background: #4285F4;
+  color: #000;
 }
 [field-type=none]{
   background: #9e9e9e;
@@ -156,9 +157,11 @@
 }
 [field-type=object]{
   background: #e48800;
+  color: #000;
 }
 [field-type=remove]{
   background: #323232;
+  color: #fff;
 }
 
 /* result entry's */
